--- a/package.json
+++ b/package.json
@@ -5,7 +5,8 @@
     "babel-preset-react": "^6.3.13",
     "babelify": "^7.2.0",
     "react": "^0.14.3",
-    "react-dom": "^0.14.3"
+    "react-dom": "^0.14.3",
+    "watchify": "^3.6.1"
   },
   "devDependencies": {
     "jasmine": "^2.4.1",
@@ -15,5 +16,8 @@
     "karma-jasmine": "^0.3.6",
     "karma-phantomjs-launcher": "^0.2.1",
     "phantomjs": "^1.9.19"
+  },
+  "scripts": {
+    "start": "watchify -v -t [ babelify --presets [ react ] ] catreact/js/components.js -o catreact/js/bundle.js"
   }
 }
