--- a/package.json
+++ b/package.json
@@ -2,31 +2,14 @@
   "name": "catavoltSdk",
   "version": "0.0.1",
   "dependencies": {
-    "babel-preset-es2015": "^6.3.13",
-    "babel-preset-react": "^6.3.13",
-    "babelify": "^7.2.0",
-    "react": "^0.14.3",
-    "react-dom": "^0.14.3",
-    "systemjs": "^0.19.9",
-    "systemjs-builder": "^0.14.15",
-    "watchify": "^3.6.1"
   },
   "devDependencies": {
-    "babel-cli": "^6.4.5",
-    "babel-core": "^6.4.5",
-    "babel-loader": "^6.2.1",
-    "babel-preset-react": "^6.3.13",
     "jasmine": "^2.4.1",
     "jasmine-core": "^2.4.1",
     "karma": "^0.13.15",
     "karma-chrome-launcher": "^0.2.2",
     "karma-jasmine": "^0.3.6",
     "karma-phantomjs-launcher": "^0.2.1",
-    "phantomjs": "^1.9.19",
-    "webpack": "^1.12.12"
-  },
-  "scripts": {
-    "start": "watchify -v -t [ babelify --presets [ es2015 react ] ] -u catreact/js/bundle.js catreact/js/components/app.js -o catreact/js/bundle.js",
-    "test": "watchify -v -t [ babelify --presets [ es2015 react ] ] -u test/bundle.js test/api.Test.js -o test/bundle.js"
+    "phantomjs": "^1.9.19"
   }
 }
