--- a/src/tsconfig.json
+++ b/src/tsconfig.json
@@ -2,6 +2,7 @@
     "compilerOptions": {
         "target": "ES6",
 	"module": "es6",
-        "sourceMap": true
+        "sourceMap": true,
+	"declaration": true
     }
 }
