moved to building es5 and commonjs for ease of compatibility with babel and browserify/webpack

--- a/src/tsconfig.json
+++ b/src/tsconfig.json
@@ -1,8 +1,7 @@
 {
     "compilerOptions": {
-        "target": "ES6",
-	"module": "es6",
-        "sourceMap": true,
-	"declaration": true
+        "target": "ES5",
+	    "module": "commonjs",
+        "sourceMap": true
     }
 }
