--- a/tsconfig.json
+++ b/tsconfig.json
@@ -5,8 +5,8 @@
 	    "module": "commonjs",
         "moduleResolution": "node",
         "sourceMap": false,
-        "rootDir": "./",
-        "outDir": "../js",
+        "rootDir": "./src",
+        "outDir": "./src/js",
         "declaration": true
     },
     "files":[
