--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "catavolt-sdk",
-  "version": "1.0.7",
+  "version": "1.0.9",
   "description": "Core Catavolt Javascript API",
   "main": "./src/js/catavolt.js",
   "typings": "./src/js/catavolt.d.ts",
@@ -14,7 +14,9 @@
   ],
   "author": "Rob Burson <rob.burson@catavolt.com>",
   "license": "Apache-2.0",
-  "dependencies": {},
+  "dependencies": {
+    "moment": "^2.14.1"
+  },
   "devDependencies": {
     "babel-preset-es2015": "^6.3.13",
     "babel-preset-react": "^6.3.13",
