--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "catavolt-sdk",
-  "version": "1.1.6",
+  "version": "1.1.7",
   "description": "Core Catavolt Javascript API",
   "main": "./src/js/catavolt.js",
   "typings": "./src/js/catavolt.d.ts",
@@ -15,7 +15,7 @@
   "author": "Rob Burson <rob.burson@catavolt.com>",
   "license": "Apache-2.0",
   "dependencies": {
-    "moment": "^2.14.1"
+    "moment": "~2.14.1"
   },
   "devDependencies": {
     "babel-preset-es2015": "^6.3.13",
