--- a/package.json
+++ b/package.json
@@ -1,9 +1,9 @@
 {
   "name": "catavolt-sdk",
-  "version": "1.1.21",
+  "version": "1.1.22",
   "description": "Core Catavolt Javascript API",
   "main": "./src/js/catavolt.js",
-  "typings": "./src/js/catavolt.d.ts",
+  "typings": "./src/tsd/catavolt.d.ts",
   "repository": {
     "type": "git",
     "url": "https://git.catavolt.com/javascript/sdk.git"
