--- a/package.json
+++ b/package.json
@@ -15,7 +15,8 @@
   "author": "Rob Burson <rob.burson@catavolt.com>",
   "license": "Apache-2.0",
   "dependencies": {
-    "moment": "~2.14.1"
+    "moment": "~2.14.1",
+    "moment-timezone": "^0.5.13"
   },
   "devDependencies": {
     "babel-preset-es2015": "^6.3.13",
