--- a/package.json
+++ b/package.json
@@ -15,8 +15,10 @@
   "author": "Rob Burson <rob.burson@catavolt.com>",
   "license": "Apache-2.0",
   "dependencies": {
+    "@types/numeral": "0.0.21",
     "moment": "~2.14.1",
-    "moment-timezone": "^0.5.13"
+    "moment-timezone": "^0.5.13",
+    "numeral": "^2.0.6"
   },
   "devDependencies": {
     "babel-preset-es2015": "^6.3.13",
