--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,14 +1,15 @@
 {
     "compileOnSave": true,
     "compilerOptions": {
-        "target": "ES5",
+        "target": "es5",
 	    "module": "commonjs",
         "moduleResolution": "node",
         "sourceMap": false,
         "rootDir": "src",
         "outDir": "src/js",
         "declarationDir": "src/tsd",
-        "declaration": true
+        "declaration": true,
+        "lib": ["es2017", "dom"]
     },
     "files":[
       "./src/catavolt.ts"
