--- a/package.json
+++ b/package.json
@@ -15,28 +15,29 @@
   "author": "Rob Burson <rob.burson@catavolt.com>",
   "license": "Apache-2.0",
   "dependencies": {
-    "@types/numeral": "0.0.21",
+    "es6-promise": "^4.1.1",
     "moment": "~2.14.1",
     "moment-timezone": "^0.5.13",
-    "numeral": "^2.0.6"
+    "numeral": "^2.0.6",
+    "whatwg-fetch": "^2.0.3"
   },
   "devDependencies": {
-    "babel-preset-es2015": "^6.3.13",
-    "babel-preset-react": "^6.3.13",
-    "babelify": "^7.2.0",
-    "jasmine": "^2.4.1",
-    "jasmine-core": "^2.4.1",
-    "karma": "^0.13.15",
-    "karma-chrome-launcher": "^0.2.2",
-    "karma-jasmine": "^0.3.6",
-    "karma-phantomjs-launcher": "^0.2.1",
-    "phantomjs": "^1.9.19",
-    "typescript": "2.3.1",
-    "webpack": "^1.12.13"
+    "@types/es6-promise": "0.0.33",
+    "@types/numeral": "0.0.21",
+    "@types/tape": "^4.2.30",
+    "@types/whatwg-fetch": "0.0.33",
+    "babel-cli": "^6.26.0",
+    "babel-preset-es2015": "^6.24.1",
+    "babelify": "^7.3.0",
+    "browser-run": "^4.0.4",
+    "browserify": "^14.4.0",
+    "faucet": "0.0.1",
+    "tape": "^4.8.0",
+    "typescript": "2.3.1"
   },
   "scripts": {
     "prepublishOnly": "bin/gen-version-code.js && tsc",
-    "build-test": "watchify -v -t [ babelify --presets [ es2015 react ] ] test/api.Test.js -o test/bundle.js",
-    "gen-version-code": "bin/gen-version-code.js"
+    "gen-version-code": "bin/gen-version-code.js",
+    "test": "./node_modules/.bin/browserify -v -t [ babelify --presets [ es2015 ] ] src/test/ws/ws.test.js | ./node_modules/.bin/browser-run -p 2222 | ./node_modules/.bin/faucet"
   }
 }
