--- a/package.json
+++ b/package.json
@@ -15,17 +15,13 @@
   "author": "Rob Burson <rob.burson@catavolt.com>",
   "license": "Apache-2.0",
   "dependencies": {
-    "es6-promise": "^4.1.1",
     "moment": "~2.14.1",
     "moment-timezone": "^0.5.13",
-    "numeral": "^2.0.6",
-    "whatwg-fetch": "^2.0.3"
+    "numeral": "^2.0.6"
   },
   "devDependencies": {
-    "@types/es6-promise": "0.0.33",
     "@types/numeral": "0.0.21",
     "@types/tape": "^4.2.30",
-    "@types/whatwg-fetch": "0.0.33",
     "babel-cli": "^6.26.0",
     "babel-preset-es2015": "^6.24.1",
     "babelify": "^7.3.0",
