--- a/package.json
+++ b/package.json
@@ -17,7 +17,8 @@
   "dependencies": {
     "moment": "~2.14.1",
     "moment-timezone": "^0.5.13",
-    "numeral": "^2.0.6"
+    "numeral": "^2.0.6",
+    "typescript": "~2.6.1"
   },
   "devDependencies": {
     "@types/numeral": "0.0.21",
