added Explorer harness

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -12,6 +12,7 @@
     },
     "files":[
       "./src/catavolt.ts",
-      "./src/test/catavolt-test.ts"
+      "./src/test/catavolt-test.ts",
+      "./src/test/explorer/index.ts"
     ]
 }
