--- a/package.json
+++ b/package.json
@@ -15,12 +15,14 @@
   "author": "Rob Burson <rob.burson@catavolt.com>",
   "license": "Apache-2.0",
   "dependencies": {
+    "babel-preset-env": "^1.6.1",
+    "babel-preset-react": "^6.24.1",
     "moment": "~2.14.1",
     "moment-timezone": "^0.5.13",
-    "numeral": "^2.0.6"
+    "numeral": "^2.0.6",
+    "react": "^16.2.0"
   },
   "devDependencies": {
-    "typescript": "~2.6.1",
     "@types/numeral": "0.0.21",
     "@types/tape": "^4.2.30",
     "babel-cli": "^6.26.0",
@@ -30,6 +32,7 @@
     "browserify": "^14.4.0",
     "faucet": "0.0.1",
     "tape": "^4.8.0",
+    "typescript": "~2.6.1",
     "watchify": "^3.9.0"
   },
   "scripts": {
