--- a/package.json
+++ b/package.json
@@ -15,12 +15,9 @@
   "author": "Rob Burson <rob.burson@catavolt.com>",
   "license": "Apache-2.0",
   "dependencies": {
-    "babel-preset-env": "^1.6.1",
-    "babel-preset-react": "^6.24.1",
     "moment": "~2.14.1",
     "moment-timezone": "^0.5.13",
-    "numeral": "^2.0.6",
-    "react": "^16.2.0"
+    "numeral": "^2.0.6"
   },
   "devDependencies": {
     "@types/numeral": "0.0.21",
@@ -33,7 +30,10 @@
     "faucet": "0.0.1",
     "tape": "^4.8.0",
     "typescript": "~2.6.1",
-    "watchify": "^3.9.0"
+    "watchify": "^3.9.0",
+    "babel-preset-env": "^1.6.1",
+    "babel-preset-react": "^6.24.1",
+    "react": "15.6.2"
   },
   "scripts": {
     "prepublishOnly": "bin/gen-version-code.js && tsc",
