--- a/package.json
+++ b/package.json
@@ -37,7 +37,6 @@
     "prepublishOnly": "bin/gen-version-code.js && tsc",
     "gen-version-code": "bin/gen-version-code.js",
     "test": "./node_modules/.bin/browserify -v -t [ babelify --presets [ es2015 ] ] src/js/test/dialog/dialog.test.js | ./node_modules/.bin/browser-run -b electron | ./node_modules/.bin/faucet",
-    "test-browser": "./node_modules/.bin/browserify -v -t [ babelify --presets [ es2015 ] ] src/js/test/dialog/dialog.test.js | ./node_modules/.bin/browser-run -p 2222 | ./node_modules/.bin/faucet",
-    "build-explorer": "./node_modules/.bin/watchify -v -t [ babelify --presets [ es2015 ] ] src/js/test/explorer/index.js -o web/explorer/bundle.js"
+    "test-browser": "./node_modules/.bin/browserify -v -t [ babelify --presets [ es2015 ] ] src/js/test/dialog/dialog.test.js | ./node_modules/.bin/browser-run -p 2222 | ./node_modules/.bin/faucet"
   }
 }
