--- a/package.json
+++ b/package.json
@@ -15,29 +15,29 @@
   "author": "Rob Burson <rob.burson@catavolt.com>",
   "license": "Apache-2.0",
   "dependencies": {
-    "moment": "^2.20.1",
-    "moment-timezone": "^0.5.14",
-    "numeral": "^2.0.6"
+    "moment": "2.20.1",
+    "moment-timezone": "0.5.14",
+    "numeral": "2.0.6"
   },
   "devDependencies": {
-    "@commitlint/cli": "^6.0.2",
-    "@commitlint/config-conventional": "^6.0.2",
+    "@commitlint/cli": "^6.1.0",
+    "@commitlint/config-conventional": "^6.1.0",
     "@types/numeral": "0.0.21",
     "@types/tape": "^4.2.30",
     "babel-cli": "^6.26.0",
     "babel-preset-es2015": "^6.24.1",
-    "babelify": "^7.3.0",
+    "babelify": "^8.0.0",
     "blue-tape": "*",
     "browser-run": "^4.0.4",
-    "browserify": "^14.4.0",
+    "browserify": "^16.1.0",
     "commitizen": "*",
     "cz-conventional-changelog": "^2.1.0",
     "faucet": "0.0.1",
-    "husky": "*",
+    "husky": "^0.14.3",
     "standard-version": "^4.3.0",
+    "tslint": "^5.9.1",
     "typedoc": "*",
-    "typescript": "~2.6.2",
-    "watchify": "^3.9.0"
+    "typescript": "~2.6.2"
   },
   "husky": {
     "hooks": {
