feat: refactor storage and added localstorage impl

--- a/package.json
+++ b/package.json
@@ -24,16 +24,20 @@
     "@commitlint/config-conventional": "^6.1.0",
     "@types/numeral": "0.0.21",
     "@types/tape": "^4.2.30",
-    "babel-cli": "^6.26.0",
-    "babel-preset-es2015": "^6.24.1",
+    "babel-core": "^6.26.3",
+    "babel-plugin-transform-runtime": "^6.23.0",
+    "babel-preset-env": "^1.7.0",
+    "babel-runtime": "^6.26.0",
     "babelify": "^8.0.0",
     "blue-tape": "*",
-    "browser-run": "^4.0.4",
-    "browserify": "^16.1.0",
+    "browser-run": "^5.0.0",
+    "browserify": "^16.2.2",
     "commitizen": "*",
     "cz-conventional-changelog": "^2.1.0",
     "faucet": "0.0.1",
     "husky": "^0.15.0-rc.8",
+    "install": "^0.11.0",
+    "npm": "^6.0.1",
     "prettier": "1.10.2",
     "standard-version": "^4.3.0",
     "tslint": "^5.9.1",
@@ -47,8 +51,8 @@
     "lint": "./node_modules/tslint/bin/tslint -c tslint.json --fix -e 'src/**/*.d.ts' 'src/**/*.ts'",
     "prettier": "./node_modules/prettier/bin-prettier.js --write src/catavolt/**/*.ts",
     "release": "standard-version",
-    "test": "./node_modules/.bin/browserify -v -t [ babelify --presets [ es2015 ] ] src/js/test/integration/api.test.js | ./node_modules/.bin/browser-run -b electron | ./node_modules/.bin/faucet",
-    "test-browser": "./node_modules/.bin/browserify -v -t [ babelify --presets [ es2015 ] ] src/js/test/integration/api.test.js | ./node_modules/.bin/browser-run -p 2222 | ./node_modules/.bin/faucet"
+    "test": "./node_modules/.bin/browserify -v -t babelify src/js/test/integration/api.test.js | ./node_modules/.bin/browser-run -b electron | ./node_modules/.bin/faucet",
+    "test-browser": "./node_modules/.bin/browserify -v -t babelify src/js/test/integration/api.test.js | ./node_modules/.bin/browser-run -p 2222 | ./node_modules/.bin/faucet"
   },
   "config": {
     "commitizen": {
