--- a/.babelrc
+++ b/.babelrc
@@ -1,9 +1,3 @@
 {
-  "presets": [ "env" ],
-  "plugins": [
-     ["transform-runtime", {
-     "polyfill": false,
-     "regenerator": true
-     }]
-  ]
+  "presets": [ "env" ]
 }
