--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
   "author": "Rob Burson <rob.burson@catavolt.com>",
   "license": "Apache-2.0",
   "dependencies": {
+    "babel-polyfill": "^6.26.0",
     "moment": "2.20.1",
     "moment-timezone": "0.5.14",
     "numeral": "2.0.6"
@@ -25,9 +26,7 @@
     "@types/numeral": "0.0.21",
     "@types/tape": "^4.2.30",
     "babel-core": "^6.26.3",
-    "babel-plugin-transform-runtime": "^6.23.0",
     "babel-preset-env": "^1.7.0",
-    "babel-runtime": "^6.26.0",
     "babelify": "^8.0.0",
     "blue-tape": "*",
     "browser-run": "^5.0.0",
